--- a/portfolio/css/experience.css
+++ b/portfolio/css/experience.css
@@ -1,5 +1,6 @@
 
 body{
+    /* body style */
     background-image: url(../images/experience.png);
     background-repeat: no-repeat;
     background-color: transparent;
@@ -15,7 +16,7 @@ h1{
 .right-align{
     text-align: right;    
 }
-
+/****************** body ********************/
 /****float boxes****/
 .box{
     max-width: 550px;
@@ -49,23 +50,6 @@ h1{
     top: 220px;
     right: 400px;
 }
-/*float footer*/
-.box3{
-    max-width: 450px;
-    width: 85%;
-    height: 40px;
-    padding: 1rem;
-    margin: -5rem;
-    background: #b08968;
-    color: white;
-    font-size: 30px;
-    border-radius: 1rem;
-}
-.posiiton3{
-    position: relative;
-    top: 400px;
-    right: -300px;
-}
 ul{
     display: flex;
     text-align: left;
@@ -84,8 +68,24 @@ ul p{
     margin: 0;
     font-size: 18px;
 }
-
-/******footer******/
+/**************** footer ***************/
+/*float footer*/
+.box3{
+    max-width: 450px;
+    width: 85%;
+    height: 40px;
+    padding: 1rem;
+    margin: -5rem;
+    background: #b08968;
+    color: white;
+    font-size: 30px;
+    border-radius: 1rem;
+}
+.posiiton3{
+    position: relative;
+    top: 400px;
+    right: -300px;
+}
 a{
     padding: 10px;
     font-size: 30px;
